--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 port = 
-DATABASE_DEV_URL = postgres://postgres:password@ip:5432/db_name
+DATABASE_DEV_URL = postgres://postgres:password@ip:5432/swc
 JWT_SECRET = 
