--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon --exec babel-node ./src/index.js",
     "migrate": "sequelize db:migrate",
     "undo:migration": "sequelize db:migrate:undo:all",
+    "super:seed": "sequelize db:seed:undo:all && sequelize db:seed:all",
+    "undo:seed": "sequelize db:seed:undo:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
